add swagger annotations for accounts
