# app/Models/Account.php
@@ -7,14 +7,17 @@ use Illuminate\Database\Eloquent\Model;
 
 
 
-/* @OA\Schema(
+/**
+ * @OA\Schema(
  *     schema="Account",
  *     type="object",
- *     title="Account model",
- *     required={"name", "amount"},
- *     @OA\Property(property="name", type="string", example="Bank card"),
- *     @OA\Property(property="amount", type="int", example="10")
-* )
+ *     title="Account",
+ *     description="Account model schema",
+ *     required={"id", "name", "amount"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="name", type="string", example="Main Account"),
+ *     @OA\Property(property="amount", type="number", example=5000)
+ * )
  */
 class Account extends Model
 {
